[tool.poetry]
name = "load-tester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "load_tester" }]

[tool.poetry.scripts]
perf_test = "load_tester.main:cli_main"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
matplotlib = "^3.9.0"
transformers = "^4.41.2"
replicate = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
